2007-06-16  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanelTest.cs: Added LimitedWidth test.

2007-06-14  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanelTest.cs: Added Measure*Empty tests.

2007-06-12  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanelTest.cs: Expanded Measure* tests.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanelTest.cs: Added.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* SrollBarTest.cs, TrackTest.cs: Changed some test timings that seemed to cause hangs sometimes.

2007-05-28  George Giolfan  <georgegiolfan@yahoo.com>

	* TrackTest.cs: Added [Ignore] to some test I can't fix now.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* RangeBaseTest.cs: Added MaximumAdjustsValue test.

2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* RangeBaseTest.cs: Added ValueOutOfRange test.
	
2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* ThumbTest.cs: Added Focusable test.